# youtube

./: .env.example  .gitignore  Dockerfile  README.md  airflow-init.sh  docker-compose.yml  pyproject.toml
airflow/dags/: youtube_analytics_dag.py
airflow/scripts/: load_to_postgres.py  pyspark_transform.py  youtube_ingest.py
data/processed/channel_stats_20251105_195303.parquet/: .part-00000-ba8e6046-d7c3-4dd4-ac30-cdf023bf7615-c000.snappy.parquet.crc  part-00000-ba8e6046-d7c3-4dd4-ac30-cdf023bf7615-c000.snappy.parquet
data/raw/: channel_stats_20251105_190143.csv  channel_stats_20251105_190144.csv  channel_stats_20251105_190316.csv  channel_stats_20251105_190339.csv  channel_stats_20251105_190340.csv  channel_stats_20251105_193550.csv  channel_stats_20251105_193811.csv  channel_stats_20251105_194739.csv  channel_stats_20251105_195251.csv  channel_stats_20251105_195259.csv  channel_stats_20251105_195300.csv  channel_stats_20251105_195429.csv  channel_stats_20251105_195436.csv  channel_stats_20251105_195437.csv  channel_stats_20251105_195645.csv  channel_stats_20251105_195805.csv  channel_stats_20251105_195806.csv  channel_stats_20251105_195918.csv  channel_stats_20251105_195919.csv  channel_stats_20251105_195955.csv  channel_stats_20251105_200013.csv  channel_stats_20251105_200033.csv  videos_20251105_190143.csv  videos_20251105_193811.csv
grafana/dashboards/: youtube-analytics-dashboard.json
scripts/: load_to_postgres.py  load_to_postgres.py.bak  youtube_ingest.py
sql/: schema.sql
(+114 files in other folders)
